[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "flask>=3.1.2",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "python-nmap>=0.7.1",
    "requests>=2.32.5",
    "shodan>=1.31.0",
]
